Fix video poster misaligned on mobile

--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -406,7 +406,6 @@ body {
         }
       }
     }
-    width: 32rem;
     .file-page__playlist-collection__row {
       @extend .file-page__recommended-collection__row;
 
@@ -417,6 +416,10 @@ body {
           }
         }
       }
+    }
+
+    @media (min-width: $breakpoint-small) {
+      width: 32rem;
     }
   }
 
